<resources>
    <string name="app_name">EP3Faith</string>
    <string name="profiel">Profiel</string>
    <string name="naamLabel">Naam:</string>
    <string name="avatar">Avatar</string>
    <string name="naamButton">Naam</string>
    <string name="wijzig">Wijzig</string>
    <string name="naam" />
    <string name="opslaan">opslaan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites">Favorieten</string>
    <string name="timeline">Tijdlijn</string>
    <string name="Profile" />
    <string name="profile">Profiel</string>
    <string name="username_label">Username:</string>
    <string name="nicerdicer">NicerDicer</string>
    <string name="profilepicture_label">Profielfoto:</string>
    <string name="this_is_profilepicture">Dit is de profielfoto</string>
    <string name="username">Username</string>
    <string name="com_auth0_domain">dev-4i-4zxou.us.auth0.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="logout">Afmelden</string>
    <string name="caption_label">Caption</string>
    <string name="new_post">Nieuwe Post</string>
    <string name="link_label">Link</string>
    <string name="afbeelding_kiezen">Kies Afbeelding</string>
    <string name="aanpassen">Aanpassen</string>
    <string name="verwijder">Verwijder</string>
    <string name="nog_een">Nog een</string>
    <string name="Dadjoke">Dad Joke</string>
    <string name="Inbox">Inbox</string>
    <string name="only_for_counselor">Dit is enkel voor begeleiders!</string>

</resources>