<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="jongere"
            type="com.example.ep3faith.Jongere" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/profielText"
            style="@style/standard_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profiel"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/naamLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/naamLabel"
                style="@style/standard_text" />

            <TextView
                android:id="@+id/naamText"
                style="@style/standard_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@={jongere.naam}"/>

            <EditText
                android:id="@+id/naamInput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/naamInput"
                android:minHeight="48dp"
                android:text="@string/naam"
                android:visibility="gone"
                tools:ignore="SpeakableTextPresentCheck"
                tools:visibility="visible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar"
            app:srcCompat="@drawable/avatar"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/avatar" />

        <Button
            android:id="@+id/wijzigButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wijzig" />

        <Button
            android:id="@+id/opslaanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opslaan"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>
</layout>