<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="profileViewModel"
            type="com.example.ep3faith.profile.ProfileViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/profileFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profileTextView"
                style="@style/text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/usernameLabelTextView"
                style="@style/text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/usernameEditPlainText"
                android:text="@string/username_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.174"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.132" />

            <EditText
                android:id="@+id/usernameEditPlainText"
                android:layout_width="146dp"
                android:layout_height="44dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/username"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.815"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.123"
                tools:visibility="gone"
                android:autofillHints="" />

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{profileViewModel.username}"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.764"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.129"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/profilePictureLabelTextView"
                style="@style/text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profilepicture_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/profilePictureImageView"
                app:layout_constraintHorizontal_bias="0.363"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.242" />

            <ImageView
                android:id="@+id/profilePictureImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/this_is_profilepicture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.742"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.266"
                app:srcCompat="@drawable/avatar" />

            <Button
                android:id="@+id/wijzigButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wijzig"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.862"
                tools:visibility="visible" />

            <Button
                android:id="@+id/opslaanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opslaan"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.862"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>